src/objects/StatusChange__e.object
<CustomObject>
    <description>Notifies NPSP about StatusChange events from external systems.</description>
    <fields>
        <fullName>Id__c</fullName>
        <label>Id</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>StatusChange</label>
    <pluralLabel>StatusChanges</pluralLabel>
</CustomObject>